--- a/article.html
+++ b/article.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>СравниPrice</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" >
   </head>
   <body>
     <div class="wrapper">
@@ -14,7 +14,7 @@
             <div class="header-left">
               <a href="index.html" class="logo"
                 ><img src="./img/logo.svg" alt="logo"
-              /></a>
+              ></a>
               <button class="header__button button open-catalog">
                 <span class="open-catalog__icon">
                   <span></span>
@@ -26,7 +26,7 @@
 
               <div class="location">
                 <div class="location__icon">
-                  <img src="./img/icons/location-icon.svg" alt="location" />
+                  <img src="./img/icons/location-icon.svg" alt="location" >
                 </div>
                 <span class="location__text">Ваш город: </span>
                 <span class="location__lacate open-popup-location">Минск</span>
@@ -60,16 +60,16 @@
               <input
                 type="text"
                 class="search-field__input"
-                placeholder="Например, ноутбук Assus" />
+                placeholder="Например, ноутбук Assus" >
               <button class="search-field__button">
-                <img src="./img/icons/search-icon.svg" alt="search" />
+                <img src="./img/icons/search-icon.svg" alt="search" >
               </button>
             </div>
 
             <div class="user-actions">
               <a href="#" class="user-actions-point user-actions-point_num">
                 <span class="user-actions-point__icon">
-                  <img src="./img/icons/equel-icon.svg" alt="comparison" />
+                  <img src="./img/icons/equel-icon.svg" alt="comparison" >
 
                   <span class="user-actions-point__num">0</span>
                 </span>
@@ -77,7 +77,7 @@
               </a>
               <a href="#" class="user-actions-point user-actions-point_num">
                 <span class="user-actions-point__icon">
-                  <img src="./img/icons/favorite-icon.svg" alt="favorite" />
+                  <img src="./img/icons/favorite-icon.svg" alt="favorite" >
 
                   <span class="user-actions-point__num">0</span>
                 </span>
@@ -214,19 +214,18 @@
                               </g>
                             </svg>
                           </button>
-                        </div>
+                        </div>                      
                       </div>
-
                       <div class="product-banner__main">
                         <h3 class="product-banner__headline">
                           <a href="#" class="product-banner__title">Наушники Honor Earbuds X3 белый</a>
-                          <div class="product-rate">
+                          <span class="product-rate">
                             <img
                               src="./img/icons/star-rate.svg"
                               alt=""
-                              class="product-rate__icon" />
+                              class="product-rate__icon" >
                             <span class="product-rate__rating">4.8</span>
-                          </div>
+                          </span>
                         </h3>
 
                         <div class="product-banner__info">
@@ -356,13 +355,13 @@
                       <div class="product-banner__main">
                         <h3 class="product-banner__headline">
                           <a href="#" class="product-banner__title">Наушники Honor Earbuds X3 белый</a>
-                          <div class="product-rate">
+                          <span class="product-rate">
                             <img
                               src="./img/icons/star-rate.svg"
                               alt=""
-                              class="product-rate__icon" />
+                              class="product-rate__icon" >
                             <span class="product-rate__rating">4.8</span>
-                          </div>
+                          </span>
                         </h3>
 
                         <div class="product-banner__info">
@@ -492,13 +491,13 @@
                       <div class="product-banner__main">
                         <h3 class="product-banner__headline">
                           <a href="#" class="product-banner__title">Наушники Honor Earbuds X3 белый</a>
-                          <div class="product-rate">
+                          <span class="product-rate">
                             <img
                               src="./img/icons/star-rate.svg"
                               alt=""
-                              class="product-rate__icon" />
+                              class="product-rate__icon" >
                             <span class="product-rate__rating">4.8</span>
-                          </div>
+                          </span>
                         </h3>
 
                         <div class="product-banner__info">
@@ -628,13 +627,13 @@
                       <div class="product-banner__main">
                         <h3 class="product-banner__headline">
                           <a href="#" class="product-banner__title">Наушники Honor Earbuds X3 белый</a>
-                          <div class="product-rate">
+                          <span class="product-rate">
                             <img
                               src="./img/icons/star-rate.svg"
                               alt=""
-                              class="product-rate__icon" />
+                              class="product-rate__icon" >
                             <span class="product-rate__rating">4.8</span>
-                          </div>
+                          </span>
                         </h3>
 
                         <div class="product-banner__info">
@@ -809,13 +808,13 @@
                   <div class="product-banner__main">
                     <h3 class="product-banner__headline">
                       <a href="#" class="product-banner__title">Наушники Honor Earbuds X3 белый</a>
-                      <div class="product-rate">
+                      <span class="product-rate">
                         <img
                           src="./img/icons/star-rate.svg"
                           alt=""
-                          class="product-rate__icon" />
+                          class="product-rate__icon" >
                         <span class="product-rate__rating">4.8</span>
-                      </div>
+                      </span>
                     </h3>
 
                     <div class="product-banner__descr">
@@ -911,7 +910,7 @@
                 <div class="slider-wrapper">
                   <div class="slider-slide blog-card">
                     <a href="#" class="blog-card__preview">
-                      <img src="./img/imgs/blog-preview.png" alt="blog" />
+                      <img src="./img/imgs/blog-preview.png" alt="blog" >
                     </a>
                     <a href="#" class="blog-card__title"
                       >Игровой ультрабук-трансформер ASUS ROG Flow X13: первые
@@ -924,7 +923,7 @@
                   </div>
                   <div class="slider-slide blog-card">
                     <a href="#" class="blog-card__preview">
-                      <img src="./img/imgs/blog-preview.png" alt="blog" />
+                      <img src="./img/imgs/blog-preview.png" alt="blog" >
                     </a>
                     <a href="#" class="blog-card__title"
                       >Игровой ультрабук-трансформер ASUS ROG Flow X13: первые
@@ -937,7 +936,7 @@
                   </div>
                   <div class="slider-slide blog-card">
                     <a href="#" class="blog-card__preview">
-                      <img src="./img/imgs/blog-preview.png" alt="blog" />
+                      <img src="./img/imgs/blog-preview.png" alt="blog" >
                     </a>
                     <a href="#" class="blog-card__title"
                       >Игровой ультрабук-трансформер ASUS ROG Flow X13: первые
@@ -960,7 +959,7 @@
           <div class="footer__wrapper">
             <a href="index.html" class="logo"
               ><img src="./img/logo.svg" alt="logo"
-            /></a>
+            ></a>
 
             <div class="footer-nav">
               <ul class="footer-nav__list">
@@ -988,17 +987,17 @@
                   <a href="#" class="footer-social__link">
                     <img
                       src="./img/icons/telegram-icon.svg"
-                      alt="telegram-icon" />
+                      alt="telegram-icon" >
                   </a>
                 </li>
                 <li class="footer-social__el">
                   <a href="#" class="footer-social__link">
-                    <img src="./img/icons/dzen-icon.svg" alt="dzen-icon" />
+                    <img src="./img/icons/dzen-icon.svg" alt="dzen-icon" >
                   </a>
                 </li>
                 <li class="footer-social__el">
                   <a href="#" class="footer-social__link">
-                    <img src="./img/icons/vk-icon.svg" alt="vk-icon" />
+                    <img src="./img/icons/vk-icon.svg" alt="vk-icon" >
                   </a>
                 </li>
               </ul>
@@ -4708,7 +4707,7 @@
 
       <div class="cookie-popup popup">
         <div class="cookie-popup__icon">
-          <img src="./img/icons/cookie.png" alt="accept cookies" />
+          <img src="./img/icons/cookie.png" alt="accept cookies" >
         </div>
         <p class="cookie-popup__paragraph">
           Используя данный сайт, Вы даете согласие на использование файлов
@@ -4736,9 +4735,9 @@
                 type="text"
                 class="search-field__input"
                 id="LocInput"
-                placeholder="Найти город" />
+                placeholder="Найти город" >
               <button class="search-field__button" id="searchLocationsBtn">
-                <img src="./img/icons/search-icon.svg" alt="search" />
+                <img src="./img/icons/search-icon.svg" alt="search" >
               </button>
             </div>
 
@@ -4784,7 +4783,7 @@
       </div>
 
       <button class="scroll-to-top">
-        <img src="./img/icons/arrow-top-white.svg" alt="" />
+        <img src="./img/icons/arrow-top-white.svg" alt="" >
       </button>
 
       <div class="user-actions user-actions_main">
@@ -4792,7 +4791,7 @@
           href="index.html"
           class="user-actions-point user-actions-point_mobile">
           <span class="user-actions-point__icon">
-            <img src="./img/icons/home-icon.svg" alt="home" />
+            <img src="./img/icons/home-icon.svg" alt="home" >
           </span>
           <h3 class="user-actions-point__title">Главная</h3>
         </a>
@@ -4800,13 +4799,13 @@
           class="user-actions-point user-actions-point_mobile open-catalog"
           id="MobileCatalogBtn">
           <span class="user-actions-point__icon">
-            <img src="./img/icons/catalogue-icon.svg" alt="catalogue" />
+            <img src="./img/icons/catalogue-icon.svg" alt="catalogue" >
           </span>
           <span class="user-actions-point__title">Каталог</span>
         </button>
         <a href="#" class="user-actions-point user-actions-point_num">
           <span class="user-actions-point__icon">
-            <img src="./img/icons/equel-icon.svg" alt="comparison" />
+            <img src="./img/icons/equel-icon.svg" alt="comparison" >
 
             <span class="user-actions-point__num">0</span>
           </span>
@@ -4814,7 +4813,7 @@
         </a>
         <a href="#" class="user-actions-point user-actions-point_num">
           <span class="user-actions-point__icon">
-            <img src="./img/icons/favorite-icon.svg" alt="favorite" />
+            <img src="./img/icons/favorite-icon.svg" alt="favorite" >
 
             <span class="user-actions-point__num">0</span>
           </span>
