--- a/category.html
+++ b/category.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>СравниPrice</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" >
   </head>
   <body>
     <div class="wrapper">
@@ -14,7 +14,7 @@
             <div class="header-left">
               <a href="index.html" class="logo"
                 ><img src="./img/logo.svg" alt="logo"
-              /></a>
+              ></a>
               <button class="header__button button open-catalog">
                 <span class="open-catalog__icon">
                   <span></span>
@@ -26,7 +26,7 @@
 
               <div class="location">
                 <div class="location__icon">
-                  <img src="./img/icons/location-icon.svg" alt="location" />
+                  <img src="./img/icons/location-icon.svg" alt="location" >
                 </div>
                 <span class="location__text">Ваш город: </span>
                 <span class="location__lacate open-popup-location">Минск</span>
@@ -60,16 +60,16 @@
               <input
                 type="text"
                 class="search-field__input"
-                placeholder="Например, ноутбук Assus" />
+                placeholder="Например, ноутбук Assus" >
               <button class="search-field__button">
-                <img src="./img/icons/search-icon.svg" alt="search" />
+                <img src="./img/icons/search-icon.svg" alt="search" >
               </button>
             </div>
 
             <div class="user-actions">
               <a href="#" class="user-actions-point user-actions-point_num">
                 <span class="user-actions-point__icon">
-                  <img src="./img/icons/equel-icon.svg" alt="comparison" />
+                  <img src="./img/icons/equel-icon.svg" alt="comparison" >
 
                   <span class="user-actions-point__num">0</span>
                 </span>
@@ -77,7 +77,7 @@
               </a>
               <a href="#" class="user-actions-point user-actions-point_num">
                 <span class="user-actions-point__icon">
-                  <img src="./img/icons/favorite-icon.svg" alt="favorite" />
+                  <img src="./img/icons/favorite-icon.svg" alt="favorite" >
 
                   <span class="user-actions-point__num">0</span>
                 </span>
@@ -138,7 +138,7 @@
                         <div class="category-card__icon">
                             <img
                             src="./img/category-icons/Appliances3d.png"
-                            alt="Бытовая техника" />
+                            alt="Бытовая техника" >
                         </div>
                     </a>
                     <a href="#" class="category-card">
@@ -146,7 +146,7 @@
                         <div class="category-card__icon">
                             <img
                             src="./img/category-icons/beautyNhealth3d.png"
-                            alt="Красота и здоровье" />
+                            alt="Красота и здоровье" >
                         </div>
                     </a>
                     <a href="#" class="category-card">
@@ -156,7 +156,7 @@
                         <div class="category-card__icon">
                             <img
                             src="./img/category-icons/smartphones3d.png"
-                            alt="Смартфоны и фототехника" />
+                            alt="Смартфоны и фототехника" >
                         </div>
                     </a>
                     <a href="#" class="category-card">
@@ -166,7 +166,7 @@
                         <div class="category-card__icon">
                             <img
                             src="./img/category-icons/tv3d.png"
-                            alt="ТВ, консоли и аудио" />
+                            alt="ТВ, консоли и аудио" >
                         </div>
                     </a>
 
@@ -177,7 +177,7 @@
                       <div class="category-card__icon">
                         <img
                           src="./img/category-icons/pc3d.png"
-                          alt="ПК, ноутбуки, перифер" />
+                          alt="ПК, ноутбуки, перифер" >
                       </div>
                     </a>
                     <a href="#" class="category-card">
@@ -187,7 +187,7 @@
                         <div class="category-card__icon">
                             <img
                             src="./img/category-icons/pc-components3d.png"
-                            alt="Комплектующие для ПК" />
+                            alt="Комплектующие для ПК" >
                         </div>
                     </a>
                     <a href="#" class="category-card">
@@ -195,7 +195,7 @@
                       <div class="category-card__icon">
                         <img
                           src="./img/category-icons/office3d.png"
-                          alt="Офис и мебель" />
+                          alt="Офис и мебель" >
                       </div>
                     </a>
                     <a href="#" class="category-card">
@@ -205,7 +205,7 @@
                       <div class="category-card__icon">
                         <img
                           src="./img/category-icons/network3d.png"
-                          alt="Сетевое оборудование" />
+                          alt="Сетевое оборудование" >
                       </div>
                     </a>
                     <a href="#" class="category-card">
@@ -215,7 +215,7 @@
                       <div class="category-card__icon">
                         <img
                           src="./img/category-icons/entertainment3d.png"
-                          alt="Отдых и развлечения" />
+                          alt="Отдых и развлечения" >
                       </div>
                     </a>
                     <a href="#" class="category-card">
@@ -223,7 +223,7 @@
                       <div class="category-card__icon">
                         <img
                           src="./img/category-icons/car3d.png"
-                          alt="Автотовары" />
+                          alt="Автотовары" >
                       </div>
                     </a>
                     <a href="#" class="category-card">
@@ -233,7 +233,7 @@
                       <div class="category-card__icon">
                         <img
                           src="./img/category-icons/accessories3d.png"
-                          alt="Аксессуары и услуги" />
+                          alt="Аксессуары и услуги" >
                       </div>
                     </a>
                 </div>
@@ -250,7 +250,7 @@
                 <div class="slider-wrapper">
                   <div class="slider-slide blog-card">
                     <a href="#" class="blog-card__preview">
-                      <img src="./img/imgs/blog-preview.png" alt="blog" />
+                      <img src="./img/imgs/blog-preview.png" alt="blog" >
                     </a>
                     <a href="#" class="blog-card__title"
                       >Игровой ультрабук-трансформер ASUS ROG Flow X13: первые
@@ -263,7 +263,7 @@
                   </div>
                   <div class="slider-slide blog-card">
                     <a href="#" class="blog-card__preview">
-                      <img src="./img/imgs/blog-preview.png" alt="blog" />
+                      <img src="./img/imgs/blog-preview.png" alt="blog" >
                     </a>
                     <a href="#" class="blog-card__title"
                       >Игровой ультрабук-трансформер ASUS ROG Flow X13: первые
@@ -276,7 +276,7 @@
                   </div>
                   <div class="slider-slide blog-card">
                     <a href="#" class="blog-card__preview">
-                      <img src="./img/imgs/blog-preview.png" alt="blog" />
+                      <img src="./img/imgs/blog-preview.png" alt="blog" >
                     </a>
                     <a href="#" class="blog-card__title"
                       >Игровой ультрабук-трансформер ASUS ROG Flow X13: первые
@@ -299,7 +299,7 @@
             <div class="articles__wrapper">
               <div class="articles__article article">
                 <div class="article__preview">
-                  <img src="./img/imgs/article-preview.png" alt="SEO-текст" />
+                  <img src="./img/imgs/article-preview.png" alt="SEO-текст" >
                 </div>
                 <div class="article__body">
                   <h2 class="article__title title title_third">SEO-текст</h2>
@@ -337,7 +337,7 @@
           <div class="footer__wrapper">
             <a href="index.html" class="logo"
               ><img src="./img/logo.svg" alt="logo"
-            /></a>
+            ></a>
 
             <div class="footer-nav">
               <ul class="footer-nav__list">
@@ -365,17 +365,17 @@
                   <a href="#" class="footer-social__link">
                     <img
                       src="./img/icons/telegram-icon.svg"
-                      alt="telegram-icon" />
+                      alt="telegram-icon" >
                   </a>
                 </li>
                 <li class="footer-social__el">
                   <a href="#" class="footer-social__link">
-                    <img src="./img/icons/dzen-icon.svg" alt="dzen-icon" />
+                    <img src="./img/icons/dzen-icon.svg" alt="dzen-icon" >
                   </a>
                 </li>
                 <li class="footer-social__el">
                   <a href="#" class="footer-social__link">
-                    <img src="./img/icons/vk-icon.svg" alt="vk-icon" />
+                    <img src="./img/icons/vk-icon.svg" alt="vk-icon" >
                   </a>
                 </li>
               </ul>
@@ -4083,9 +4083,10 @@
         </div>
       </div>
 
+
       <div class="cookie-popup popup">
         <div class="cookie-popup__icon">
-          <img src="./img/icons/cookie.png" alt="accept cookies" />
+          <img src="./img/icons/cookie.png" alt="accept cookies" >
         </div>
         <p class="cookie-popup__paragraph">
           Используя данный сайт, Вы даете согласие на использование файлов
@@ -4113,9 +4114,9 @@
                 type="text"
                 class="search-field__input"
                 id="LocInput"
-                placeholder="Найти город" />
+                placeholder="Найти город" >
               <button class="search-field__button" id="searchLocationsBtn">
-                <img src="./img/icons/search-icon.svg" alt="search" />
+                <img src="./img/icons/search-icon.svg" alt="search" >
               </button>
             </div>
 
@@ -4161,7 +4162,7 @@
       </div>
 
       <button class="scroll-to-top">
-        <img src="./img/icons/arrow-top-white.svg" alt="" />
+        <img src="./img/icons/arrow-top-white.svg" alt="" >
       </button>
 
       <div class="user-actions user-actions_main">
@@ -4169,7 +4170,7 @@
           href="index.html"
           class="user-actions-point user-actions-point_mobile">
           <span class="user-actions-point__icon">
-            <img src="./img/icons/home-icon.svg" alt="home" />
+            <img src="./img/icons/home-icon.svg" alt="home" >
           </span>
           <h3 class="user-actions-point__title">Главная</h3>
         </a>
@@ -4177,13 +4178,13 @@
           class="user-actions-point user-actions-point_mobile open-catalog"
           id="MobileCatalogBtn">
           <span class="user-actions-point__icon">
-            <img src="./img/icons/catalogue-icon.svg" alt="catalogue" />
+            <img src="./img/icons/catalogue-icon.svg" alt="catalogue" >
           </span>
           <span class="user-actions-point__title">Каталог</span>
         </button>
         <a href="#" class="user-actions-point user-actions-point_num">
           <span class="user-actions-point__icon">
-            <img src="./img/icons/equel-icon.svg" alt="comparison" />
+            <img src="./img/icons/equel-icon.svg" alt="comparison" >
 
             <span class="user-actions-point__num">0</span>
           </span>
@@ -4191,7 +4192,7 @@
         </a>
         <a href="#" class="user-actions-point user-actions-point_num">
           <span class="user-actions-point__icon">
-            <img src="./img/icons/favorite-icon.svg" alt="favorite" />
+            <img src="./img/icons/favorite-icon.svg" alt="favorite" >
 
             <span class="user-actions-point__num">0</span>
           </span>
